# MonetDBe-Python

./: .dockerignore  .gitignore  .readthedocs.yml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  env.rc  make_wheels.sh  osx_wheel.sh  playing.py  pyproject.toml  setup.cfg  setup.py  win_wheel.bat
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: doc.yml  linux.yml  main.yml  mypy.yml  osx.yml  pycodestyle.yml  pythonpackage.yml  windows.yml
.inside/: info.sh  make_wheel.sh  mypy.sh  pycodestyle.sh  test.sh
LICENSES/: NUMPY_LICENSE
doc/: API.rst  conf.py  developer.rst  index.rst  installation.rst  introduction.rst  migrations.rst  requirements.txt
docker/: doc.docker  test38.docker  wheel.docker
monetdbe/: __init__.py  _cffi.py  compat.py  connection.py  converters.py  cursor.py  cursors.py  dbapi2.py  dump.py  exceptions.py  formatting.py  monetize.py  pythonize.py  row.py  todo.py  types.py  version.py
monetdbe/_cffi/: README  __init__.py  builder.py  convert.py  embed.h  embed.h.j2  errors.py  frontend.py  internal.py  (+4 more)
notebooks/: basic_example.ipynb
scripts/: doc.sh  info.sh  make_wheel.sh  mypy.sh  osx_wheel.sh  pycodestyle.sh  test.sh  win.ps1  win_wheel.bat  win_wheel.ps1
tests/: example.csv  test_amapi.py  test_backup.py  test_cffi.py  test_csv.py  test_dataframe.py  test_dbapi.py  test_dump.py  test_example1.py  test_factory.py  test_formatting.py  test_gijs.py  test_hooks.py  test_mapi.py  test_multi_mem.py  test_prepare.py  test_regression.py  test_simple.py  test_transactions.py  test_types.py  test_userfunctions.py
(+30 files in other folders)
