[tool.poetry]
name = "monetdbe"
version = "0.1"
description = "MonetDBe - the Python embedded MonetDB"
license = "MPL-2.0"
authors = ["Gijs Molenaar <gijs@pythonic.nl>"]
readme = "README.md"
repository = "https://github.com/gijzelaerr/monetdbe"
include = ["monetdbe/py.typed"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12", 'cffi']
build-backend = "poetry.masonry.api"
